Add workable JAVA_OPTS / GRAILS_OPTS to avoid PermGen errors